--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -73,7 +73,7 @@ $dark:          $gray-800 !default;
 
 $theme-colors: () !default;
 $theme-colors: map-merge((
-  "primary":    $primary,
+  "primary":    $yellow,
   "secondary":  $secondary,
   "success":    $success,
   "info":       $info,
