--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,10 @@ $font-heading: 'Abril Fatface', sans-serif;
 @import "variables";
 @import "mixins";
 
+@font-face {
+	font-family: 'myFont';
+	src: url("fonts/cursiv.ttf") ;
+}
 
 
 html {
@@ -92,7 +96,8 @@ header {
 	left: 0;
 	width: 100%;
 	z-index: 5;
-	background: transparent!important;
+	background: transparent !important;
+
 	@include media-breakpoint-down(lg) {
 		top: 0;
 	}
@@ -101,19 +106,22 @@ header {
 		color: $white;
 		border: 1px solid #ccc;
 	}
+
 	.navbar-brand {
 		text-transform: uppercase;
 		letter-spacing: .2em;
 		font-weight: 400;
 		color: $white;
 		font-family: $font-heading;
-		
+
 		&.absolute {
 			position: absolute;
+
 			@include media-breakpoint-down(md) {
 				position: relative;
 			}
 		}
+
 		span {
 			color: $white;
 		}
@@ -122,33 +130,38 @@ header {
 
 	.navbar-nav {
 		@include media-breakpoint-down(lg) {
-			padding-left: 0!important;
+			padding-left: 0 !important;
 		}
 	}
+
 	.navbar {
 		padding-top: 0;
 		padding-bottom: 0;
-		background: none!important;
+		background: none !important;
 		position: relative;
 		font-family: $font-family-sans-serif;
+
 		@include media-breakpoint-down(lg) {
-			background: rgba(0,0,0,1)!important;
+			background: rgba(0,0,0,1) !important;
 			padding-top: .5rem;
 			padding-bottom: .5rem;
 		}
+
 		.nav-link {
-			padding: 1.7rem 1rem!important;
-			outline: none!important;
+			padding: 1.7rem 1rem !important;
+			outline: none !important;
 			font-size: .9rem;
 			letter-spacing: .1rem;
 			text-transform: uppercase;
 			font-weight: 300;
 			color: $primary;
+
 			@include media-breakpoint-down(md) {
-				padding: .5rem 0rem!important;
+				padding: .5rem 0rem !important;
 			}
+
 			&.active {
-				color: $info;
+				color: $secondary;
 			}
 		}
 
@@ -169,46 +182,49 @@ header {
 				height: 0;
 				width: 0;
 				position: absolute;
-				pointer-events: none;				
+				pointer-events: none;
 				border-bottom-color: #fff;
 				border-width: 7px;
+
 				@include media-breakpoint-down(md) {
 					display: none;
 				}
 			}
 
 			.dropdown-item {
-				
+
 				&:hover {
 					background: theme-color('primary');
-					color: $black;	
+					color: $black;
 				}
+
 				&.active {
 					background: theme-color('primary');
 					color: $black;
 				}
 			}
+
 			a {
 				padding-top: 7px;
 				padding-bottom: 7px;
 				color: $black;
-
 			}
 		}
+
 		.cta-btn {
 			a {
 				background: theme-color('primary');
-				color: $black!important;
-				padding-left: 20px!important;
-
-				padding-right: 20px!important;
+				color: $black !important;
+				padding-left: 20px !important;
+				padding-right: 20px !important;
 				text-transform: uppercase;
-				padding-top: 26px!important;
-				padding-bottom: 26px!important;
+				padding-top: 26px !important;
+				padding-bottom: 26px !important;
 				line-height: 1;
 				transition: .3s all ease;
+
 				&:hover {
-					color: $black!important;
+					color: $black !important;
 					box-shadow: 2px 0 30px -5px rgba(theme-color('primary'), .9);
 				}
 			}
@@ -217,6 +233,7 @@ header {
 
 	.search-form {
 		position: relative;
+
 		.icon {
 			position: absolute;
 			top: 50%;
@@ -225,6 +242,7 @@ header {
 			transform: translateY(-50%);
 			color: $white;
 		}
+
 		.form-control {
 			padding-left: 30px;
 			border: none;
@@ -233,19 +251,22 @@ header {
 			background: transparent;
 			border-bottom: 1px solid rgba($white, .3);
 			color: $white;
+
 			&::-webkit-input-placeholder { /* Chrome/Opera/Safari */
 				color: rgba($white, .5);
 			}
+
 			&::-moz-placeholder { /* Firefox 19+ */
 				color: rgba($white, .5);
 			}
+
 			&:-ms-input-placeholder { /* IE 10+ */
 				color: rgba($white, .5);
 			}
+
 			&:-moz-placeholder { /* Firefox 18- */
 				color: rgba($white, .5);
 			}
-			
 		}
 	}
 }
