--- a/css/style.css
+++ b/css/style.css
@@ -139,12 +139,12 @@ sup {
   top: -.5em; }
 
 a {
-  color: #fff;
+  color: #17a2b8;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects; }
   a:hover {
-    color: #d9d9d9;
+    color: #0f6674;
     text-decoration: underline; }
 
 a:not([href]):not([tabindex]) {
@@ -2125,10 +2125,10 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #fff;
+  color: #17a2b8;
   background-color: transparent; }
   .btn-link:hover {
-    color: #d9d9d9;
+    color: #0f6674;
     text-decoration: underline;
     background-color: transparent;
     border-color: transparent; }
@@ -3310,12 +3310,12 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #fff;
+  color: #17a2b8;
   background-color: #fff;
   border: 1px solid #dee2e6; }
   .page-link:hover {
     z-index: 2;
-    color: #d9d9d9;
+    color: #0f6674;
     text-decoration: none;
     background-color: #e9ecef;
     border-color: #dee2e6; }
