--- a/css/style.css
+++ b/css/style.css
@@ -6866,7 +6866,7 @@ header {
     font-family: "myFont", "Roboto Mono", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; }
     @media (max-width: 1199.98px) {
       header .navbar {
-        background: black !important;
+        background: rgba(0, 0, 0, 0.4) !important;
         padding-top: .5rem;
         padding-bottom: .5rem; } }
     header .navbar .nav-link {
