--- a/scss/style.css
+++ b/scss/style.css
@@ -4,6 +4,7 @@
  * Copyright 2011-2018 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+@import url("https://fonts.googleapis.com/css2?family=Rozha+One&display=swap");
 @font-face {
   font-family: 'myFont';
   src: url("fonts/cursiv.ttf"); }
@@ -6758,9 +6759,6 @@ a.text-dark:hover, a.text-dark:focus {
 @font-face {
   font-family: 'myFont';
   src: url("fonts/cursiv.ttf"); }
-@font-face {
-  font-family: 'RozhaOne';
-  src: url("fonts/RozhaOne-Regular.ttf"); }
 html {
   overflow-x: hidden;
   scroll-behavior: smooth; }
@@ -6782,7 +6780,7 @@ a {
 h1, h2, h3, h4, h5 {
   color: #000;
   line-height: 1.5;
-  font-family: "RozhaOne", sans-serif;
+  font-family: "Abril Fatface", sans-serif;
   font-weight: 900; }
 
 .btn, .form-control {
@@ -6868,7 +6866,7 @@ header {
     font-family: "myFont", "Roboto Mono", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; }
     @media (max-width: 1199.98px) {
       header .navbar {
-        background: black !important;
+        background: rgba(0, 0, 0, 0) !important;
         padding-top: .5rem;
         padding-bottom: .5rem; } }
     header .navbar .nav-link {
