--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1565,9 +1565,11 @@ figure {
 .work-thumb {
 	display: block;
 	position: relative;
+
 	img {
 		border: 10px solid $white;
 	}
+
 	.work-text {
 		text-align: center;
 		position: absolute;
@@ -1576,34 +1578,42 @@ figure {
 		width: 90%;
 		margin-top: 20px;
 		transition: .3s all ease;
-		opacity: 0;
-		visibility: hidden;
+		opacity: 1;
+		visibility: visible;
 		transform: translate(-50%, -50%);
+
 		h2 {
 			color: $white;
 			font-weight: 300;
 			margin-bottom: 0;
 			font-size: 1.5rem;
 		}
+
 		p {
 			color: rgba($white, .5);
 		}
 	}
+
 	&:before {
 		content: "";
 		background: rgba($black, .5);
 		position: absolute;
 		transition: .3s all ease;
-		opacity: 0;
-		visibility: hidden;
-		top: 10px; left: 10px; right: 10px; bottom: 10px;
+		opacity: 1;
+		visibility: visible;
+		top: 10px;
+		left: 10px;
+		right: 10px;
+		bottom: 10px;
 	}
+
 	&:hover {
 		.work-text {
 			margin-top: 0px;
 			opacity: 1;
 			visibility: visible;
 		}
+
 		&:before {
 			opacity: 1;
 			visibility: visible;
