--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -153,7 +153,7 @@ $body-color:                $gray-900 !default;
 
 $link-color: theme-color("info") !default;
 $link-decoration:           none !default;
-$link-hover-color:          darken($link-color, 15%) !default;
+$link-hover-color:          none !default;
 $link-hover-decoration:     underline !default;
 
 // Paragraphs
