--- a/scss/bootstrap-reboot.css
+++ b/scss/bootstrap-reboot.css
@@ -115,7 +115,7 @@ a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects; }
   a:hover {
-    color: #0f6674;
+    color: none;
     text-decoration: underline; }
 
 a:not([href]):not([tabindex]) {
