--- a/scss/style.css
+++ b/scss/style.css
@@ -145,7 +145,7 @@ a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects; }
   a:hover {
-    color: #0f6674;
+    color: none;
     text-decoration: underline; }
 
 a:not([href]):not([tabindex]) {
@@ -2129,7 +2129,7 @@ fieldset:disabled a.btn {
   color: #17a2b8;
   background-color: transparent; }
   .btn-link:hover {
-    color: #0f6674;
+    color: none;
     text-decoration: underline;
     background-color: transparent;
     border-color: transparent; }
@@ -2899,6 +2899,7 @@ input[type="button"].btn-block {
 .navbar-collapse {
   flex-basis: 100%;
   flex-grow: 1;
+  /*background: rgba(0, 0, 0, 0.8);*/
   align-items: center; }
 
 .navbar-toggler {
@@ -3316,7 +3317,7 @@ input[type="button"].btn-block {
   border: 1px solid #dee2e6; }
   .page-link:hover {
     z-index: 2;
-    color: #0f6674;
+    color: none;
     text-decoration: none;
     background-color: #e9ecef;
     border-color: #dee2e6; }
@@ -6866,7 +6867,7 @@ header {
     font-family: "myFont", "Roboto Mono", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; }
     @media (max-width: 1199.98px) {
       header .navbar {
-        background: rgba(0, 0, 0, 0) !important;
+        background: rgba(0, 0, 0, 0.3) !important;
         padding-top: .5rem;
         padding-bottom: .5rem; } }
     header .navbar .nav-link {
@@ -6886,7 +6887,7 @@ header {
       font-size: 14px;
       border-radius: 4px;
       border: none;
-      box-shadow: 0 2px 30px 0px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 2px 30px 0px rgba(0, 0, 0, 0.8);
       min-width: 13em;
       margin-top: -10px; }
       header .navbar .dropdown-menu:before {
@@ -7920,8 +7921,8 @@ figure figcaption {
     width: 90%;
     margin-top: 20px;
     transition: .3s all ease;
-    opacity: 0;
-    visibility: hidden;
+    opacity: 1;
+    visibility: visible;
     transform: translate(-50%, -50%); }
     .work-thumb .work-text h2 {
       color: #fff;
@@ -7935,8 +7936,8 @@ figure figcaption {
     background: rgba(0, 0, 0, 0.5);
     position: absolute;
     transition: .3s all ease;
-    opacity: 0;
-    visibility: hidden;
+    opacity: 1;
+    visibility: visible;
     top: 10px;
     left: 10px;
     right: 10px;
