--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,7 @@ $font-heading-new: 'Rozha One', sans-serif;
 
 @font-face {
 	font-family: 'myFont';
-	src: url("fonts/RozhaOne-Regular.ttf");
+	src: url("../fonts/VarelaRound-Regular.ttf");
 }
 
 @font-face {
